--- a/index.css
+++ b/index.css
@@ -7,18 +7,19 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 2rem;
 }
 
-.card,
-#listContainer {
-    max-width: 800px;
+form {
+    margin: 0 auto;
+    max-width: 500px;
+    border: 1px solid hsl(0, 0%, 50%);
+    border-radius: 4px;
+    padding: 1rem;
+    background-color: hsl(0, 0%, 100%);
 }
 
-#listContainer {
-    display: flex;
-    flex-direction: column;
+ul.list-group {
+    max-width: 1000px;
+    margin: 2rem auto;
 }
